# LangChain_Project

./: pyproject.toml  requirements.txt
UpdatedLanchain/: 1-LangchainIntro.ipynb  2-ModelIntegration.ipynb  3-Tools.ipynb  Structured_Outputs.ipynb
