[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "langchain>=1.3.9,<2.0.0",
    "langchain-core>=1.4.7,<2.0.0",
    "langchain-community>=0.4.2,<1.0.0",
    "langchain-openai>=1.3.2,<2.0.0",
    "langchain-groq>=1.1.3,<2.0.0",
    "langchain-google-genai>=4.2.5,<5.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "ipykernel>=7.3.0",
]
